--- a/src/SetRemoteUrlDialog.ui
+++ b/src/SetRemoteUrlDialog.ui
@@ -55,7 +55,17 @@
        </widget>
       </item>
       <item row="1" column="1">
-       <widget class="RepositoryLineEdit" name="lineEdit_url"/>
+       <widget class="RepositoryUrlComboBox" name="comboBox_url">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="editable">
+         <bool>true</bool>
+        </property>
+       </widget>
       </item>
       <item row="1" column="2">
        <widget class="QPushButton" name="pushButton_test">
@@ -110,9 +120,9 @@
    <header>RemoteRepositoriesTableWidget.h</header>
   </customwidget>
   <customwidget>
-   <class>RepositoryLineEdit</class>
-   <extends>QLineEdit</extends>
-   <header>RepositoryLineEdit.h</header>
+   <class>RepositoryUrlComboBox</class>
+   <extends>QComboBox</extends>
+   <header>RepositoryUrlComboBox.h</header>
   </customwidget>
  </customwidgets>
  <tabstops>
@@ -120,7 +130,6 @@
   <tabstop>pushButton_2</tabstop>
   <tabstop>tableWidget</tabstop>
   <tabstop>lineEdit_name</tabstop>
-  <tabstop>lineEdit_url</tabstop>
  </tabstops>
  <resources/>
  <connections>
