--- a/src/AddRepositoryDialog.ui
+++ b/src/AddRepositoryDialog.ui
@@ -17,7 +17,7 @@
    <item>
     <widget class="QStackedWidget" name="stackedWidget">
      <property name="currentIndex">
-      <number>1</number>
+      <number>2</number>
      </property>
      <widget class="QWidget" name="page_first">
       <layout class="QVBoxLayout" name="verticalLayout">
@@ -157,7 +157,11 @@
              </widget>
             </item>
             <item row="1" column="1">
-             <widget class="RepositoryLineEdit" name="lineEdit_remote_url"/>
+             <widget class="RepositoryUrlComboBox" name="comboBox_remote_url">
+              <property name="editable">
+               <bool>true</bool>
+              </property>
+             </widget>
             </item>
             <item row="1" column="2">
              <widget class="QPushButton" name="pushButton_test_repo">
@@ -276,11 +280,6 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>RepositoryLineEdit</class>
-   <extends>QLineEdit</extends>
-   <header>RepositoryLineEdit.h</header>
-  </customwidget>
-  <customwidget>
    <class>DirectoryLineEdit</class>
    <extends>QLineEdit</extends>
    <header>DirectoryLineEdit.h</header>
@@ -291,6 +290,11 @@
    <header>RemoteAdvancedOptionWidget.h</header>
    <container>1</container>
   </customwidget>
+  <customwidget>
+   <class>RepositoryUrlComboBox</class>
+   <extends>QComboBox</extends>
+   <header>RepositoryUrlComboBox.h</header>
+  </customwidget>
  </customwidgets>
  <tabstops>
   <tabstop>radioButton_clone</tabstop>
@@ -300,7 +304,6 @@
   <tabstop>lineEdit_local_path</tabstop>
   <tabstop>pushButton_browse_local_path</tabstop>
   <tabstop>lineEdit_remote_name</tabstop>
-  <tabstop>lineEdit_remote_url</tabstop>
   <tabstop>pushButton_test_repo</tabstop>
   <tabstop>comboBox_search</tabstop>
   <tabstop>pushButton_prev</tabstop>
