--- a/src/EditRemoteDialog.ui
+++ b/src/EditRemoteDialog.ui
@@ -45,7 +45,17 @@
        </widget>
       </item>
       <item row="1" column="1">
-       <widget class="RepositoryLineEdit" name="lineEdit_url"/>
+       <widget class="RepositoryUrlComboBox" name="comboBox_url">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="editable">
+         <bool>true</bool>
+        </property>
+       </widget>
       </item>
       <item row="1" column="2">
        <widget class="QPushButton" name="pushButton_test">
@@ -118,20 +128,19 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>RepositoryLineEdit</class>
-   <extends>QLineEdit</extends>
-   <header>RepositoryLineEdit.h</header>
-  </customwidget>
-  <customwidget>
    <class>RemoteAdvancedOptionWidget</class>
    <extends>QWidget</extends>
    <header>RemoteAdvancedOptionWidget.h</header>
    <container>1</container>
   </customwidget>
+  <customwidget>
+   <class>RepositoryUrlComboBox</class>
+   <extends>QComboBox</extends>
+   <header>RepositoryUrlComboBox.h</header>
+  </customwidget>
  </customwidgets>
  <tabstops>
   <tabstop>lineEdit_name</tabstop>
-  <tabstop>lineEdit_url</tabstop>
   <tabstop>pushButton_test</tabstop>
   <tabstop>pushButton_ok</tabstop>
   <tabstop>pushButton_close</tabstop>
