--- a/src/SubmoduleAddDialog.ui
+++ b/src/SubmoduleAddDialog.ui
@@ -48,12 +48,9 @@
       </widget>
      </item>
      <item row="0" column="1">
-      <widget class="RepositoryLineEdit" name="lineEdit_repo_location">
-       <property name="minimumSize">
-        <size>
-         <width>320</width>
-         <height>0</height>
-        </size>
+      <widget class="RepositoryUrlComboBox" name="comboBox_remote">
+       <property name="editable">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
@@ -86,6 +83,21 @@
        <height>110</height>
       </size>
      </property>
+     <layout class="QVBoxLayout" name="verticalLayout_3">
+      <item>
+       <spacer name="verticalSpacer">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>238</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+     </layout>
     </widget>
    </item>
    <item>
@@ -126,11 +138,6 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>RepositoryLineEdit</class>
-   <extends>QLineEdit</extends>
-   <header>RepositoryLineEdit.h</header>
-  </customwidget>
-  <customwidget>
    <class>DirectoryLineEdit</class>
    <extends>QLineEdit</extends>
    <header>DirectoryLineEdit.h</header>
@@ -141,9 +148,13 @@
    <header>RemoteAdvancedOptionWidget.h</header>
    <container>1</container>
   </customwidget>
+  <customwidget>
+   <class>RepositoryUrlComboBox</class>
+   <extends>QComboBox</extends>
+   <header>RepositoryUrlComboBox.h</header>
+  </customwidget>
  </customwidgets>
  <tabstops>
-  <tabstop>lineEdit_repo_location</tabstop>
   <tabstop>pushButton_test</tabstop>
   <tabstop>lineEdit_working_dir</tabstop>
   <tabstop>pushButton_browse</tabstop>
