--- a/src/SetRemoteUrlDialog.ui
+++ b/src/SetRemoteUrlDialog.ui
@@ -55,15 +55,12 @@
        </widget>
       </item>
       <item row="1" column="1">
-       <widget class="RepositoryUrlComboBox" name="comboBox_url">
+       <widget class="RepositoryUrlLineEdit" name="lineEdit_url">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
-        </property>
-        <property name="editable">
-         <bool>true</bool>
         </property>
        </widget>
       </item>
@@ -120,9 +117,9 @@
    <header>RemoteRepositoriesTableWidget.h</header>
   </customwidget>
   <customwidget>
-   <class>RepositoryUrlComboBox</class>
+   <class>RepositoryUrlLineEdit</class>
    <extends>QComboBox</extends>
-   <header>RepositoryUrlComboBox.h</header>
+   <header>RepositoryUrlLineEdit.h</header>
   </customwidget>
  </customwidgets>
  <tabstops>
