--- a/src/SubmoduleAddDialog.ui
+++ b/src/SubmoduleAddDialog.ui
@@ -48,11 +48,7 @@
       </widget>
      </item>
      <item row="0" column="1">
-      <widget class="RepositoryUrlComboBox" name="comboBox_remote">
-       <property name="editable">
-        <bool>true</bool>
-       </property>
-      </widget>
+      <widget class="RepositoryUrlLineEdit" name="lineEdit_remote"/>
      </item>
     </layout>
    </item>
@@ -149,9 +145,9 @@
    <container>1</container>
   </customwidget>
   <customwidget>
-   <class>RepositoryUrlComboBox</class>
-   <extends>QComboBox</extends>
-   <header>RepositoryUrlComboBox.h</header>
+   <class>RepositoryUrlLineEdit</class>
+   <extends>QLineEdit</extends>
+   <header>RepositoryUrlLineEdit.h</header>
   </customwidget>
  </customwidgets>
  <tabstops>
