--- a/src/SubmoduleAddDialog.ui
+++ b/src/SubmoduleAddDialog.ui
@@ -38,7 +38,7 @@
       </widget>
      </item>
      <item row="1" column="1">
-      <widget class="DirectoryLineEdit" name="lineEdit_working_dir"/>
+      <widget class="WorkingDirLineEdit" name="lineEdit_working_dir"/>
      </item>
      <item row="1" column="0">
       <widget class="QLabel" name="label_2">
@@ -134,9 +134,9 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>DirectoryLineEdit</class>
+   <class>WorkingDirLineEdit</class>
    <extends>QLineEdit</extends>
-   <header>DirectoryLineEdit.h</header>
+   <header>WorkingDirLineEdit.h</header>
   </customwidget>
   <customwidget>
    <class>RemoteAdvancedOptionWidget</class>
